--- a/vue_src/index.html
+++ b/vue_src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Vue-AnyChart</title>
+    <title>Temp info</title>
+    <link href='static/main.css' rel='stylesheet'>
   </head>
   <body>
     <div id="app"></div>
